--- a/MatthewsBlog.html
+++ b/MatthewsBlog.html
@@ -21,9 +21,14 @@
        <p>Please stay a while! </p>
     
 </body>
-<h2>
+<h2><strong>The openining of Sweet Scoops </strong></h2>
+    <body>
+        <p>Downtown's culinary landscape just got sweeter with the grand opening of "Sweet Scoops," a charming ice cream parlor nestled in the heart of the city. With its vibrant storefront and inviting atmosphere, Sweet Scoops promises to be a delightful addition to the community, offering a wide array of delectable frozen treats to satisfy every palate. From classic flavors like rich chocolate and creamy vanilla to innovative creations such as lavender honey and avocado lime, there's something to tickle everyone's taste buds at this new hotspot.</p>
+    </body>
+    
+<h3>
     <b> Comment Section</b>
-   </h2> 
+   </h3> 
 <body>
 <hr>
     <p><q><i> I heard the owner of this blog is pretty cool</i></q><br>
