--- a/MatthewsBlog.html
+++ b/MatthewsBlog.html
@@ -9,6 +9,6 @@
     <h1>Welcome to Our News Hub</h1>
     <p>Welcome to Matthews Blog, your go-to source for the latest news and updates!</p>
     <p>Check out our latest article:</p>
-    <a href="NewIcecream.html">New Ice Cream Shop "Sweet Scoops" Opens its Doors in Downtown</a>
+    <a href="NewIcecreamShop.html">New Ice Cream Shop "Sweet Scoops" Opens its Doors in Downtown</a>
 </body>
 </html>
