--- a/SharkWebsite.html
+++ b/SharkWebsite.html
@@ -7,11 +7,11 @@
 </head>
 <body>
     <h1><strong> Types of Sharks</strong></h1>
-    <img src="SmallHammerHeadPic.jpg" alt ="Hammerhead Shark"/>
+    <img src="SharkPics/SmallHammerHeadPic.jpg" alt ="Hammerhead Shark"/>
     <p class="attribution">"<a target="_blank" rel="noopener noreferrer" href="https://www.flickr.com/photos/44124401641@N01/3568621418">hammerhead silhouette</a>" by <a target="_blank" rel="noopener noreferrer" href="https://www.flickr.com/photos/44124401641@N01">istolethetv</a> is licensed under <a target="_blank" rel="noopener noreferrer" href="https://creativecommons.org/licenses/by/2.0/?ref=openverse">CC BY 2.0 <img src="https://mirrors.creativecommons.org/presskit/icons/cc.svg" style="height: 1em; margin-right: 0.125em; display: inline;"></img><img src="https://mirrors.creativecommons.org/presskit/icons/by.svg" style="height: 1em; margin-right: 0.125em; display: inline;"></img></a>.</p>
-    <img src="Shark2.jpg" alt= "Whitetip shark"/>
+    <img src="SharkPics/Shark2.jpg" alt= "Whitetip shark"/>
     <p class="attribution">"<a target="_blank" rel="noopener noreferrer" href="https://www.flickr.com/photos/93641120@N05/37437664176">Whitetip Shark</a>" by <a target="_blank" rel="noopener noreferrer" href="https://www.flickr.com/photos/93641120@N05">Papahānaumokuākea Marine National Monument</a> is marked with <a target="_blank" rel="noopener noreferrer" href="https://creativecommons.org/publicdomain/mark/1.0/?ref=openverse">Public Domain Mark 1.0 <img src="https://mirrors.creativecommons.org/presskit/icons/pd.svg" style="height: 1em; margin-right: 0.125em; display: inline;"></img></a>.</p>
-    <img src="greatwhite.jpg" alt="Great white shark"/>
+    <img src="SharkPics/greatwhite.jpg" alt="Great white shark"/>
     <p class="attribution">"<a target="_blank" rel="noopener noreferrer" href="https://www.flickr.com/photos/98585738@N07/10346101216">Great White Shark in South Africa</a>" by <a target="_blank" rel="noopener noreferrer" href="https://www.flickr.com/photos/98585738@N07">travelbagltd</a> is licensed under <a target="_blank" rel="noopener noreferrer" href="https://creativecommons.org/licenses/by/2.0/?ref=openverse">CC BY 2.0 <img src="https://mirrors.creativecommons.org/presskit/icons/cc.svg" style="height: 1em; margin-right: 0.125em; display: inline;"></img><img src="https://mirrors.creativecommons.org/presskit/icons/by.svg" style="height: 1em; margin-right: 0.125em; display: inline;"></img></a>.</p>
 </body>
 </html>
